# digital-fte-hr

./: .env.local.example  .gitignore  .mcp.json  AUTHENTICATION_IMPLEMENTATION.md  BEFORE_AFTER_COMPARISON.md  BUILD_CHECKLIST.md  COGNITO_MIGRATION_SUMMARY.md  DEPLOYMENT.md  FRONTEND_FIXES_SUMMARY.md  FRONTEND_STATUS_REPORT.md  MCP_QUICKSTART.md  MCP_SETUP.md  MCP_SETUP_COMPLETE.md  MCP_SETUP_GUIDE.md  PLAYWRIGHT_TEST_REPORT.md  QUICK_REFERENCE.md  README.md  README_MCP.md  TESTING_COMPLETE.md  TEST_REPORT.md  VERCEL_DEPLOYMENT_STEPS.md  VERCEL_QUICKSTART.md  biome.json  package.json  pnpm-lock.yaml  test-api.js  test-app-final.js  test-app-headed.js  test-app-playwright.js  test-vercel-deployment.js  test-vercel-deployment.mjs  tsconfig.json  verify-mcp.sh
.claude/: settings.local.json
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: index.ts
apps/api/src/lib/: errors.ts  handler.ts
apps/web/: .env.local.example  vercel.json
digital-fte-hr/: CLAUDE.md  PROFILE_SETTINGS_TEST.md
digital-fte-hr/.claude/rules/: agents.md  api-conventions.md  security.md  testing.md
digital-fte-hr/.claude/skills/: README.md
digital-fte-hr/apps/api/: CLAUDE.md
digital-fte-hr/apps/mobile/: CLAUDE.md
digital-fte-hr/apps/web/: .gitignore  BUILD_STATUS.md  CLAUDE.md  DEPLOYMENT_GUIDE.md  PHASE_4_IMPLEMENTATION.md  PHASE_4_VERIFICATION.md  README.md  SUPABASE_SETUP.md  TEST_RESULTS.md  VERCEL_DEPLOYMENT_STATUS.md  biome.json  comprehensive-test.js  deploy.js  deploy.sh  middleware.ts  next.config.js  package-lock.json  package.json  playwright-auth-test.js  pnpm-lock.yaml  tailwind.config.ts  test-alias-debug.mjs  test-alias-url.mjs  test-app-direct.mjs  test-auth-complete.js  test-auth-debug.js  test-auth-errors.js  test-auth-fix.mjs  test-auth-fixed.js  test-auth-simple.js  test-check-credentials.mjs  test-dashboard-debug.mjs  test-dashboard-direct.mjs  test-dashboard-error.mjs  test-dashboard-fix.mjs  test-debug-full.mjs  test-deployed-app.mjs  test-final-deployment.mjs  test-final.js  test-fixed-app.js  (+16 more)
digital-fte-hr/docs/: agent-contracts.md  architecture.md  channel-specs.md  compliance.md  database-schema.md  platform-integrations.md
digital-fte-hr/infra/: CLAUDE.md
digital-fte-hr/services/auto-apply-agent/: CLAUDE.md
digital-fte-hr/services/channel-orchestration/: CLAUDE.md
digital-fte-hr/services/job-search-agent/: CLAUDE.md
mcp-tools/: SKILL.md
services/job-search-agent/: .env.example  README.md  pyproject.toml
services/job-search-agent/src/: main.py
services/job-search-agent/src/digital_fte_job_search/: __init__.py
services/job-search-agent/src/digital_fte_job_search/scoring/: __init__.py  deduplicator.py  ghost_detector.py  matcher.py
services/job-search-agent/src/digital_fte_job_search/scrapers/: __init__.py  base.py  indeed.py  linkedin.py  playwright_scraper.py
services/job-search-agent/src/digital_fte_job_search/workflow/: __init__.py  graph.py
services/resume-builder-agent/: .env.example  README.md  pyproject.toml  requirements.txt
services/resume-builder-agent/src/: main.py
services/resume-builder-agent/src/digital_fte_resume_builder/: __init__.py
services/resume-builder-agent/src/digital_fte_resume_builder/exporters/: __init__.py  base.py  exporters.py
services/resume-builder-agent/src/digital_fte_resume_builder/extractors/: __init__.py  base.py  form_extractor.py  pdf_extractor.py
services/resume-builder-agent/src/digital_fte_resume_builder/optimizers/: __init__.py  agents.py  base.py
services/resume-builder-agent/src/digital_fte_resume_builder/scoring/: __init__.py  ats_scorer.py
services/resume-builder-agent/src/digital_fte_resume_builder/workflow/: __init__.py  graph.py
(+117 files in other folders)
